// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots VersionAndApiEnvironment Production 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  paddingTop={0}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "borderWidth": 1,
        "margin": 5,
        "padding": 5,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#9b9b9b",
              "fontFamily": "OpenSans-Regular",
              "fontSize": 17,
            },
          ]
        }
      >
        v
        3.1.1
        
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`Storyshots VersionAndApiEnvironment Staging 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  paddingTop={0}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "borderWidth": 1,
        "margin": 5,
        "padding": 5,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#9b9b9b",
              "fontFamily": "OpenSans-Regular",
              "fontSize": 17,
            },
          ]
        }
      >
        v
        3.1.1
         on Staging
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;
